[package]
name = "ws-replyer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.23.1"
env_logger = "0.11.3"
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
rand = "0.8"
futures-util = "0.3.30"